--- a/chand.html
+++ b/chand.html
@@ -111,17 +111,24 @@
             </div>
 
             <div class="col-lg-7">
-                <p class="display-6">View Profile</p>
+                <p class="fs-3">Overview</p>
                 <p class="text-justify">
-                    In the first place, I am inspired to be being actively involved in rural agricultural development
-                    projects. I gained my first inspairation during my work as Project Manager with one of German NGO
-                    projects called GTZ-IFSP (Intergrated Food Security Program). Thank the project for creating the
-                    posibilty to gain my own experience in developing people farmer companies, registration of trade
-                    mark and exporting agricultural product which could make an enoumous evolution for the small scale
-                    farmers for their move in larger scale.
-                    I thank the founder of SLBI group Mr. Prof. Naidu for giving me the the opperchunity to be a part
-                    the project taking over the lead of SLBI Group in Switzerland.
+                    In the first place, she inspired to be being actively involved in rural agricultural development
+                    projects. she
+                    gained her first inspairation during my work as Project Manager with one of German NGO projects
+                    called
+                    GTZ-IFSP (Intergrated Food Security Program). Thank the project for creating the posibilty to gain
+                    her
+                    own experience in developing people farmer companies, registration of trade mark and exporting
+                    agricultural product which could make an enoumous evolution for the small scale farmers for their
+                    move in
+                    larger scale.
 
+                </p>
+                <p class="text-justify">
+                    She thank the founder of S L B I group Mr. Prof. Rifaitheen Naidu for giving her the the
+                    opperchunity to
+                    be a part the project taking over the lead of S L B I Group in Switzerland.
                 </p>
 
                 <!-- <p class="display-6 mt-4">Experience</p>
@@ -129,14 +136,14 @@
                     Bachelor of Business Administration, Operation Level Chartered Institute of Management Accountants
                     (CIMA), Higher National Diploma in Accounting, Diploma in Human Resource Managements (HRM), Diploma
                     in Computerized Accounting, Diploma in Information Technology
-                </p>
+                </p> -->
 
-                <p class="display-6 mt-4">Education</p>
+                <p class="fs-3 mt-4">Education</p>
 
                 <p class="text-justify">
-                    MBA (Finance), B.Com (Specialized in Accounting and Finance), Diploma Stage of Certified Management
-                    Accountants (CMA), Diploma in Computerized Accounting, Diploma in Software Engineering
-                </p> -->
+                    Holder of BSc. in Agriculture, MSc. in Management of Environmental protection and food production at
+                    University of Hohenheim, Germany.
+                </p>
             </div>
         </div>
     </div>
