--- a/contact.html
+++ b/contact.html
@@ -140,12 +140,13 @@
                 <img width="275" src="assets/img/contact/sl.jpg" class="img-fluid lanka mb-4" alt="...">
                 <p class="fs-4 fw-bold">S L B I Group (Pvt) Ltd</p>
                 <p>
-                    No. 563/2, Hajiyar Road,<br>
-                    Nintavur-05, <br>
+                    Rajapaksa Niwasa, Pallarota, Mamadala<br>
+                    Postcode: 82109 <br>
                     Sri Lanka <br>
-                    Tel: <span style="visibility: hidden;">'</span> +94 67 31 31 931 <br>
+                    Tel: <span style="visibility: hidden;">'</span> +94 047 222 3809 <br>
                     Mob: +94 777 17 29 49 <br>
-                    &nbsp; &nbsp; &nbsp; <span style="visibility: hidden;">''</span> +94 760 99 91 31 <br>
+                    &nbsp; &nbsp; &nbsp; <span style="visibility: hidden;">''</span> +94 77 15 19 359 <br>
+                    &nbsp; &nbsp; &nbsp; <span style="visibility: hidden;">''</span> +94 760 999 131 <br>
                     E-mail: <a href="mailto:info@slbigroup.com">info@slbigroup.com</a>
                 </p>
             </div>
