--- a/directors.html
+++ b/directors.html
@@ -106,67 +106,77 @@
             <div class="row row-cols-1 row-cols-md-3 g-3">
                 <div class="col">
                     <div class="card">
-                        <img src="assets/img/team/1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="rifai.html" class="card-text fs-5 name ceo">
-                                Prof. Rifaitheen Naidu (MBA, PMP, DBA) <br> I M F Analyst
-                                <span class="designation">
-                                    Founder & CEO
-                                </span>
-                            </a>
-                        </div>
+                        <a href="rifai.html">
+                            <img src="assets/img/team/1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body overlay team">
+                                <p href="#" class="card-text fs-5 name">
+                                    Prof. Rifaitheen Naidu <br> (MBA, PMP, DBA)
+                                    <span class="designation">
+                                        Founder & CEO
+                                    </span>
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="assets/img/team/2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="muza.html" class="card-text fs-5 name">
-                                Mohamed Muzammil
-                                <span class="designation">
-                                    Co-Founder/Director/ <br> Chief Finance Officer
-                                </span>
-                            </a>
-                        </div>
+                        <a href="muza.html">
+                            <img src="assets/img/team/2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body overlay team">
+                                <p class="card-text fs-5 name">
+                                    Mohamed Muzammil
+                                    <span class="designation">
+                                        Co-Founder/Director/ <br> Chief Finance Officer
+                                    </span>
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="assets/img/team/4.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="muba.html" class="card-text fs-5 name">
-                                Muhammed Mubarak
-                                <span class="designation">
-                                    Co-Founder/Director/ <br> Chief Administrative Officer
-                                </span>
-                            </a>
-                        </div>
+                        <a href="muba.html">
+                            <img src="assets/img/team/4.jpg" class="card-img-top" alt="...">
+                            <div class="card-body overlay team">
+                                <p class="card-text fs-5 name">
+                                    Muhammed Mubarak
+                                    <span class="designation">
+                                        Co-Founder/Director/ <br> Chief Administrative Officer
+                                    </span>
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="assets/img/team/3.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="nath.html" class="card-text fs-5 name">
-                                A. Natheer Ahamed
-                                <span class="designation">
-                                    Director <br> Business Development
-                                </span>
-                            </a>
-                        </div>
+                        <a href="nath.html">
+                            <img src="assets/img/team/3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body overlay team">
+                                <p class="card-text fs-5 name">
+                                    A. Natheer Ahamed
+                                    <span class="designation">
+                                        Director <br> Business Development
+                                    </span>
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="assets/img/team/5.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay team">
-                            <a href="chand.html" class="card-text fs-5 name">
-                                Chandrakala Ramanan
-                                <span class="designation">
-                                    Director – SLBI Group LLC, Switzerland
-                                </span>
-                            </a>
-                        </div>
+                        <a href="chand.html">
+                            <img src="assets/img/team/5.jpg" class="card-img-top" alt="...">
+                            <div class="card-body overlay team">
+                                <p class="card-text fs-5 name">
+                                    Chandrakala Ramanan
+                                    <span class="designation">
+                                        Director <br> SLBI Group LLC, Switzerland
+                                    </span>
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
