--- a/muba.html
+++ b/muba.html
@@ -111,25 +111,35 @@
             </div>
 
             <div class="col-lg-7">
-                <p class="display-6">View Profile</p>
+                <p class="fs-3">Overview</p>
                 <p class="text-justify">
-                    Managing and supervising the day-to-day operations of various departments, such as finance, sales,
+                    Being CAO in the Administration Industry is a tough task, thankfully he was here to man the
+                    helm. Managing and supervising the day-to-day operations of various departments, such as finance,
+                    sales,
                     HR, and marketing. Managing budgets, hiring and contracting, and business negotiations. Analyzing
                     audit reports and formulating improvements to departmental workings.
                 </p>
 
-                <p class="display-6 mt-4">Experience</p>
+                <p class="fs-3 mt-4">Experience</p>
                 <p class="text-justify">
-                    Bachelor of Business Administration, Operation Level Chartered Institute of Management Accountants
-                    (CIMA), Higher National Diploma in Accounting, Diploma in Human Resource Managements (HRM), Diploma
-                    in Computerized Accounting, Diploma in Information Technology
+                    With Over 10 years of experience in entrepreneurship, management, administration, operations,
+                    sales, marketing, HR, business planning, accounting, finance, financial analysis, and decision
+                    analysis. He has the extent and gravity of experience to quickly understand entrepreneurs’
+                    business and craft the most suitable solutions.
                 </p>
 
-                <p class="display-6 mt-4">Education</p>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p class="fs-3 mt-4">Education</p>
 
                 <p class="text-justify">
-                    MBA (Finance), B.Com (Specialized in Accounting and Finance), Diploma Stage of Certified Management
-                    Accountants (CMA), Diploma in Computerized Accounting, Diploma in Software Engineering
+                    Bachelor of Business Administration, Operation Level Chartered Institute of Management
+                    Accountants (CIMA), Higher National Diploma in Accounting, Diploma in Human Resource
+                    Managements (HRM), Diploma in Computerized Accounting, Diploma in Information
+                    Technology
                 </p>
             </div>
         </div>
