--- a/muza.html
+++ b/muza.html
@@ -111,15 +111,16 @@
             </div>
 
             <div class="col-lg-7">
-                <p class="display-6">View Profile</p>
+                <p class="fs-3">Overview</p>
                 <p class="text-justify">
-                    He has primary responsibility for the planning, implementation, managing and running of all the
+                    Being CFO in the Financial Industry is a tough task, thankfully he was here to man the helm. He has
+                    primary responsibility for the planning, implementation, managing and running of all the
                     finance activities of S L B I Group, including business planning, budgeting, forecasting,
                     negotiations and maintaining investor relations and partnership compliance.
 
                 </p>
 
-                <p class="display-6 mt-4">Experience</p>
+                <p class="fs-3 mt-4">Experience</p>
                 <p class="text-justify">
                     With over 20 years of experience in entrepreneurship, management, administration, operations,
                     software engineering, business planning, accounting, finance, financial analysis, and decision
@@ -127,7 +128,7 @@
                     and craft the most suitable solutions.
                 </p>
 
-                <p class="display-6 mt-4">Education</p>
+                <p class="fs-3 mt-4">Education</p>
 
                 <p class="text-justify">
                     MBA (Finance), B.Com (Specialized in Accounting and Finance), Diploma Stage of Certified Management
