--- a/nath.html
+++ b/nath.html
@@ -111,16 +111,18 @@
             </div>
 
             <div class="col-lg-7">
-                <p class="display-6">View Profile</p>
+                <p class="fs-3">Overview</p>
                 <p class="text-justify">
-                    As a business development Director, he’ll identify new business opportunities in order to generate
+                    Being Director - Business Development, his concerned with improving and growing a business,
+                    by establishing and developing relationships with customers, suppliers and other partners. As a
+                    business development Director, he’ll identify new business opportunities in order to generate
                     revenue, improve profitability and help the business grow. His work can involve careful strategic
                     planning and positioning in the appropriate markets, or enhancing the operation of the business,
                     position or reputation in some way. He may have a single role in the organization or lead a team of
                     staff. His work will often reach across all areas of the business.
                 </p>
 
-                <p class="display-6 mt-4">Experience</p>
+                <p class="fs-3 mt-4">Experience</p>
                 <p class="text-justify">
                     Multy linguistic, having more than 20 years experience in entrepreneurship, management, sales,
                     marketing, business development and decision analysis in various companies and relatedly had
@@ -128,7 +130,12 @@
                     entrepreneurs’ business and craft the most suitable solutions.
                 </p>
 
-                <p class="display-6 mt-4">Education</p>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p class="fs-3 mt-4">Education</p>
 
                 <p class="text-justify">
                     Accredited Bachelor Degree in Science Faculty, Higher National Diploma in Marketing, Diploma in
