--- a/rifai.html
+++ b/rifai.html
@@ -111,39 +111,43 @@
             </div>
 
             <div class="col-lg-7">
-                <p class="display-6">View Profile</p>
+                <p class="fs-3 ">Overview</p>
                 <p class="text-justify">
-                    He forms and establishes S L B I Group. He is typically responsible for achieving the mission and
+                    The Founder of S L B I Group, he has been the caption of this sip from the beginning and has
+                    sailed. He forms and establishes S L B I Group. He is typically responsible for achieving the
+                    mission and
                     vision of a company. Essentially, he takes a business from an idea to an entity in the early stages
                     of a company, team members wear many hats ensuring the work gets done to keep the company going as
                     it grows and scales. In many situations, this means the individual who created the business is often
                     tasked with managing the overall operations of the company as CEO
                 </p>
 
-                <p class="display-6 mt-4">Experience</p>
+                <p class="fs-3 mt-4">Experience</p>
                 <p class="text-justify">
-                    He holds a bachelor's degree in Business Management and Investment Management from Binary University
-                    Malaysia. Courses; He studied an MBA program covering various fields such as business management
-                    accounting, utilization statistics, human resources, business communication, business ethics,
-                    business law, business strategy, finance, and management economics. He studied management,
-                    entrepreneurship, marketing, supply-chain management and operational management in a way that is
-                    most relevant to management analysis and strategy.
+                    With over 10 years of experience in entrepreneurship, program cover various areas of business
+                    administration such as accounting, applied statistics, human resources, business communication,
+                    business ethics, business law, business strategy, finance, managerial economics, management,
+                    entrepreneurship, marketing, supply-chain management, and operations management in a manner
+                    most relevant to management analysis and strategy.. He has the extensiveness and deepness of
+                    experience to quickly understand entrepreneurs’ business and craft the most suitable solutions.
                 </p>
             </div>
         </div>
 
         <div class="row">
             <div class="col-12">
-                <p class="display-6 mt-4">Education</p>
+                <p class="fs-3 mt-4">Education</p>
 
                 <p class="fs-5 fw-bold">Master of Business Administration </p>
                 <p class="text-justify">
-                    With over 10 years of experience in entrepreneurship, program cover various areas of business
-                    administration such as accounting, applied statistics, human resources, business communication,
-                    business ethics, business law, business strategy, finance, managerial economics, management,
-                    entrepreneurship, marketing, supply-chain management, and operations management in a manner most
-                    relevant to management analysis and strategy.. He has the extensiveness and deepness of experience
-                    to quickly understand entrepreneurs’ business and craft the most suitable solutions.
+                    He holds a bachelor&#39;s degree in Business
+                    Management and Investment Management from Binary University Malaysia. Courses;
+                    He studied an MBA program covering various fields such as business management
+                    accounting, utilization statistics, human resources, business communication, business
+                    ethics, business law, business strategy, finance, and management economics. He studied
+
+                    management, entrepreneurship, marketing, supply-chain management and operational
+                    management in a way that is most relevant to management analysis and strategy.
                 </p>
 
                 <p class="fs-5 fw-bold">Doctor of Business Administration </p>
