abstract to overview nav

--- a/aboutus.html
+++ b/aboutus.html
@@ -62,7 +62,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle smooth-menu" data-toggle="dropdown">About Us</a>
                         <ul class="dropdown-menu">
-                            <li><a href="aboutus.html">Abstracts</a></li>
+                            <li><a href="aboutus.html">Overview</a></li>
                             <li><a href="founder-message.html">Founder Message</a></li>
                             <li><a href="directors.html">Board of Directors</a></li>
                             <li><a href="vision.html">Our Vision & Missions</a></li>
