--- a/index.html
+++ b/index.html
@@ -106,25 +106,24 @@
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
-                <div class="carousel-item bg-fixed active"
-                    style="background-image: url(assets/img/banner/banner-1.jpg);">
+                <div class="carousel-item bg-fixed active" style="background-image: url(assets/img/banner/1.jpg);">
                     <div class="box-table shadow dark">
                         <div class="box-cell">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-lg-6 offset-lg-6">
+                                    <div class="col-lg-6">
                                         <div class="content">
-                                            <h4 class="animated slideInLeft">Renewable energy</h4>
-                                            <h2 data-animation="animated slideInDown">Biggest Producer for Wind, Solar
-                                                Energy</h2>
+                                            <h4 class="animated slideInLeft">Welcome to</h4>
+                                            <h2 data-animation="animated slideInDown">S L B I Group</h2>
                                             <p class="animated slideInRight">
-                                                Affixed pretend account ten natural. Need eat week even yet that.
-                                                Incommode delighted he resolving sportsmen.
+                                                We are providing numerous business opportunities for small,
+                                                medium, and largest enterprises to leverage innovative technology
+                                                to compete more efficiently domestically and globally in sector
                                             </p>
                                             <div class="slider-button">
                                                 <a data-animation="animated slideInUp"
-                                                    class="btn btn-theme effect btn-md"
-                                                    href="projects-details.html">View Projects</a>
+                                                    class="btn btn-outline-light effect btn-md" href="#">Explore
+                                                    Now</a>
                                             </div>
                                         </div>
                                     </div>
@@ -133,24 +132,183 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item bg-fixed" style="background-image: url(assets/img/banner/banner-2.jpg);">
+                <div class="carousel-item bg-fixed" style="background-image: url(assets/img/banner/2.jpg);">
                     <div class="box-table shadow dark">
                         <div class="box-cell">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-lg-6 offset-lg-6">
+                                    <div class="col-lg-6">
                                         <div class="content">
-                                            <h4 class="animated slideInLeft">Renewable energy</h4>
-                                            <h2 data-animation="animated slideInDown">Sustainable & reliable energy!
-                                            </h2>
+                                            <h4 class="animated slideInLeft">Industrial Industry</h4>
+                                            <h2 data-animation="animated slideInDown">Biggest
+                                                Manufacturer in
+                                                many sector</h2>
                                             <p class="animated slideInRight">
-                                                Affixed pretend account ten natural. Need eat week even yet that.
-                                                Incommode delighted he resolving sportsmen.
+                                                Establish Private Industrial Campus and construct hundreds of factories
+                                                in the manufacturing industry
                                             </p>
                                             <div class="slider-button">
                                                 <a data-animation="animated slideInUp"
-                                                    class="btn btn-theme effect btn-md"
-                                                    href="projects-details.html">View Projects</a>
+                                                    class="btn btn-outline-light effect btn-md" href="#">View
+                                                    Projects</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item bg-fixed" style="background-image: url(assets/img/banner/3.jpg);">
+                    <div class="box-table shadow dark">
+                        <div class="box-cell">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="content">
+                                            <h4 class="animated slideInLeft">Renewable Energy</h4>
+                                            <h2 data-animation="animated slideInDown">Biggest Producer
+                                                for Wind, Solar
+                                                Energy</h2>
+                                            <p class="animated slideInRight">
+                                                Renewable energy is already becoming a more familiar part of our lives,
+                                                and innovation will continue to drive new applications of solar energy
+                                                technologies that will improve our daily lives and help power a cleaner
+                                                world.
+                                            </p>
+                                            <div class="slider-button">
+                                                <a data-animation="animated slideInUp"
+                                                    class="btn btn-outline-light effect btn-md" href="#">View
+                                                    Projects</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item bg-fixed" style="background-image: url(assets/img/banner/4.jpg);">
+                    <div class="box-table shadow dark">
+                        <div class="box-cell">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="content">
+                                            <h4 class="animated slideInLeft">Milk Products Production</h4>
+                                            <h2 data-animation="animated slideInDown">Largest Dairy Farm</h2>
+                                            <p class="animated slideInRight">
+                                                Form Modern Cow Dairy Farming for the purpose of milk and dairy
+                                                products
+                                            </p>
+                                            <div class="slider-button">
+                                                <a data-animation="animated slideInUp"
+                                                    class="btn btn-outline-light effect btn-md" href="#">View
+                                                    Projects</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item bg-fixed" style="background-image: url(assets/img/banner/5.jpg);">
+                    <div class="box-table shadow dark">
+                        <div class="box-cell">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="content">
+                                            <h4 class="animated slideInLeft">Garment Industry</h4>
+                                            <h2 data-animation="animated slideInDown">Modern Garments
+                                                Factories</h2>
+                                            <p class="animated slideInRight">
+                                                Found modern Garments factories to manufacturing man, women and
+                                                children clothing items to trade local and international markets
+                                            </p>
+                                            <div class="slider-button">
+                                                <a data-animation="animated slideInUp"
+                                                    class="btn btn-outline-light effect btn-md" href="#">View
+                                                    Projects</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item bg-fixed" style="background-image: url(assets/img/banner/6.jpg);">
+                    <div class="box-table shadow dark">
+                        <div class="box-cell">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="content">
+                                            <h4 class="animated slideInLeft">Hospitality industry</h4>
+                                            <h2 data-animation="animated slideInDown">Hotels and Resorts</h2>
+                                            <p class="animated slideInRight">
+                                                Establish many modern hotels and resorts to develop tourism services
+                                            </p>
+                                            <div class="slider-button">
+                                                <a data-animation="animated slideInUp"
+                                                    class="btn btn-outline-light effect btn-md" href="#">View
+                                                    Projects</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item bg-fixed" style="background-image: url(assets/img/banner/7.jpg);">
+                    <div class="box-table shadow dark">
+                        <div class="box-cell">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="content">
+                                            <h4 class="animated slideInLeft">Trading Industry</h4>
+                                            <h2 data-animation="animated slideInDown">Supermarkets and
+                                                Shopping Mall</h2>
+                                            <p class="animated slideInRight">
+                                                Establish Many Supermarkets and Shopping malls in the largest scale to
+                                                trade retails and wholesale business
+                                            </p>
+                                            <div class="slider-button">
+                                                <a data-animation="animated slideInUp"
+                                                    class="btn btn-outline-light effect btn-md" href="#">View
+                                                    Projects</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item bg-fixed" style="background-image: url(assets/img/banner/8.jpg);">
+                    <div class="box-table shadow dark">
+                        <div class="box-cell">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="content">
+                                            <h4 class="animated slideInLeft">Financial Service</h4>
+                                            <h2 data-animation="animated slideInDown">Best Private Banking
+                                                Service Provider</h2>
+                                            <p class="animated slideInRight">
+                                                Start Private Bank to provide bank services to attract customers, from
+                                                giving loans, credit and debit cards, digital financial services, and
+                                                even
+                                                personal services
+                                            </p>
+                                            <div class="slider-button">
+                                                <a data-animation="animated slideInUp"
+                                                    class="btn btn-outline-light effect btn-md" href="#">View
+                                                    Projects</a>
                                             </div>
                                         </div>
                                     </div>
@@ -179,12 +337,12 @@
     <!-- Start Founder Message -->
     <div class="container py-5">
         <h1 class="fw-bolder">Founder Message</h1>
-        <p class="fs-5 text-justify">
+        <p class="fs-5 text-justify mb-4">
             S L B I GROUP is not only the number one destination in the world until world destroyed but also on a
             journey of defining 10 structures to perpetuate a series of community tasks and the company is a journey
             that brings together all the entrepreneurs to make company employers best the economy.
         </p>
-        <a href="founder-message.html" class="text-muted fs-5 read-more fst-italic">Read More...</a>
+        <a href="founder-message.html" class="fs-5 text-muted read-more p-2 border border-secondary">Read More</a>
     </div>
     <!-- End Founder Message -->
 
